# controllers/Cart.js
@@ -1,0 +1,19 @@
+"use strict";
+
+var utils = require("../utils/writer.js");
+var Cart = require("../service/CartService");
+
+module.exports.cartCartIdGET = function cartCartIdGET(req, res, next) {
+  var cartId = req.swagger.params["cartId"].value;
+  if (!req.session || !req.session.loggedin) {
+    utils.writeJson(res, { error: "sorry, you must be authorized" }, 404);
+  } else {
+    Cart.cartCartIdGET(cartId)
+      .then(function(response) {
+        utils.writeJson(res, response);
+      })
+      .catch(function(response) {
+        utils.writeJson(res, response);
+      });
+  }
+};
