# service/UserService.js
@@ -1,0 +1,31 @@
+'use strict';
+
+
+/**
+ * Login
+ * Login with a form
+ *
+ * username String 
+ * password String 
+ * no response value expected for this operation
+ **/
+exports.userLoginPOST = function(username,password) {
+  return new Promise(function(resolve, reject) {
+    resolve();
+  });
+}
+
+
+/**
+ * Register
+ * Register into the store
+ *
+ * body User 
+ * no response value expected for this operation
+ **/
+exports.userRegisterPOST = function(body) {
+  return new Promise(function(resolve, reject) {
+    resolve();
+  });
+}
+
